fixing league-moderating view navigation and aligning icons in several tables

--- a/src/assets/css/general-layout.css
+++ b/src/assets/css/general-layout.css
@@ -148,3 +148,8 @@ input:-webkit-autofill:active {
   color: gray;
 }
 
+.with-icon-centered {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
